# CPlusPlus4OtherLanguage

./: CMakeLists.txt  README.md
0.helloWorld/src/: main.cpp
1.functionDeclaration/include/: swap.h
1.functionDeclaration/src/: main.cpp
2.pointer/src/: main.cpp
3.struct/src/: main.cpp
4.memoryArea/include/: temp.h
4.memoryArea/src/: main.cpp
5.reference/src/: main.cpp
